add links (read,delete,update)

--- a/Lab4/src/at.ac.tuwien.big.views.gen/output/institute.html
+++ b/Lab4/src/at.ac.tuwien.big.views.gen/output/institute.html
@@ -68,6 +68,8 @@
 								<li data-ng-repeat="professor in professors">
 								{{ professor.email }}
 								<!--add links here-->
+								<a href="" data-ng-click="navigationProfessor('UpdateProfessor');
+								updateProfessor(professor.id)">udpate</a>
 								</li>
 							</ul>
 							<button value="CreateProfessor" class="btn btn-primary btn-sm">Add</button>
